Update repository configuration and content

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: 1947 台灣教會公報
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Tâi-gí-bûn Kì-ek Chheh-tha̍k-á
-baseurl: "/scannedImgViewer"
+baseurl: "/TaioanHusiannKauhoePo1947"
 url: "https://kiek.taigi.info"
 
 # navigation
